[package]
name = "ebird2spatialite"
version = "0.1.0"
authors = ["dminor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
clap = "2.33.3"
csv = "1.1.3"
flate2 = "1.0.17"
geo = "0.14.2"
regex = "1.3.9"
rusqlite = { version = "0.24.0", features = ["load_extension"] }
serde = { version = "1.0.115", features = ["derive"] }
wkt = "0.8.0"
